# FaceRecognizer-Back-End

./: ._.gitignore  ._conanfile.py  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.py
3rdPartyLibs/: README.txt
3rdPartyLibs/SQLAPI/include/: SQLAPI.h  asaAPI.h  cubeSqlAPI.h  db2API.h  ibAPI.h  infAPI.h  myAPI.h  odbcAPI.h  pgAPI.h  sbAPI.h  sl3API.h  ssNcliAPI.h  ssOleDbAPI.h  sybAPI.h
3rdPartyLibs/SQLAPI/include/ibase/: ibase.h
3rdPartyLibs/SQLAPI/vs2019/lib/: sqlapi.lib
3rdPartyLibs/cryptopp820/: conaninfo.txt  conanmanifest.txt  cryptest.vcxproj  cryptlib.vcxproj  hrtimer.h
3rdPartyLibs/cryptopp820/x64/Output/Debug/: cryptlib.lib
3rdPartyLibs/easylogging++/samples/VC++/VCPP2015_Win32/VCPP2015_Win32/: VCPP2015_Win32.vcxproj.filters
3rdPartyLibs/easylogging++/src/: easylogging++.h
3rdPartyLibs/gtest/: conaninfo.txt  conanmanifest.txt
3rdPartyLibs/gtest/include/gtest/internal/: gtest-port.h
3rdPartyLibs/opencv/: conaninfo.txt  conanmanifest.txt
3rdPartyLibs/opencv/include/opencv2/: cvconfig.h  opencv_modules.hpp
3rdPartyLibs/opencv/res/: setup_vars_opencv4.cmd
3rdPartyLibs/opencv/res/haarcascades/: haarcascade_mcs_nose.xml
ConanFiles/: conan_brotli.props  conan_brotli_debug_x64.props  conan_bzip2.props  conan_bzip2_debug_x64.props  conan_cryptopp.props  conan_cryptopp_debug_x64.props  conan_double-conversion.props  conan_double-conversion_debug_x64.props  conan_eigen.props  conan_eigen_debug_x64.props  conan_freetype.props  conan_freetype_debug_x64.props  conan_gtest.props  conan_gtest_debug_x64.props  conan_imports_manifest.txt  conan_jasper.props  conan_jasper_debug_x64.props  conan_jbig.props  conan_jbig_debug_x64.props  conan_libdeflate.props  conan_libdeflate_debug_x64.props  conan_libjpeg.props  conan_libjpeg_debug_x64.props  conan_libpng.props  conan_libpng_debug_x64.props  conan_libpq.props  conan_libpq_debug_x64.props  conan_libtiff.props  conan_libtiff_debug_x64.props  conan_libwebp.props  conan_libwebp_debug_x64.props  conan_opencv.props  conan_opencv_debug_x64.props  conan_openexr.props  conan_openexr_debug_x64.props  conan_opengl.props  conan_opengl_debug_x64.props  conan_openssl.props  conan_openssl_debug_x64.props  conan_pcre2.props  (+17 more)
RealTimeFaceMaskDetector/: CMakeLists.txt  CreatePhotos.sql  RealTimeFaceMaskDetector.pro  RealTimeFaceMaskDetector.sln  config.ini
RealTimeFaceMaskDetector/ClientInstall/: ClientInstall.vdproj
RealTimeFaceMaskDetector/DateTimeDLL/: CMakeLists.txt  DateTime.cpp  DateTime.h  DateTimeDLL.vcxproj  DateTimeDLL.vcxproj.filters  DateTimeException.cpp  DateTimeException.h
RealTimeFaceMaskDetector/DateTimeTests/: DateTimeTests.vcxproj  test.cpp
RealTimeFaceMaskDetector/EncryptDecryptECBMode/: AsyncEncrRSA.cpp  AsyncEncrRSA.h  CMakeLists.txt  Configuration.conf  EncryptDecryptAES_ECBMode.cpp  EncryptDecryptAES_ECBMode.h  EncryptDecryptECBMode.vcxproj  EncryptDecryptECBMode.vcxproj.filters  EncryptDecryptRSA.cpp  EncryptDecryptRSA.h  ICrypt.h  cpp.hint  framework.h  pch.h
RealTimeFaceMaskDetector/FaceRecognition/: FaceRecognition.vcxproj  FaceRecognition.vcxproj.filters  MaskRecognizer.cpp  MaskRecognizer.h  main.cpp
RealTimeFaceMaskDetector/LogViewer/: CMakeLists.txt  Filter.cpp  Filter.h  LogSearcher.h  LogViewer.cpp  LogViewer.h  LogViewer.qrc  LogViewer.ui  LogViewer.vcxproj  LogViewer.vcxproj.filters  LogViewerException.h  Parser.cpp  Parser.h  Source.cpp  main.cpp  structures.h  utility.h
RealTimeFaceMaskDetector/LogViewerTests/: LogViewerTests.vcxproj  test.cpp
RealTimeFaceMaskDetector/Logger/: CMakeLists.txt  Configuration.conf  Logger.cpp  Logger.h  Logger.vcxproj  Logger.vcxproj.filters  LoggerDLL.cpp  easylogging++.cpp  easylogging++.h  framework.h
RealTimeFaceMaskDetector/NetFramework/: NetFramework.cpp  NetFramework.vcxproj  NetFramework.vcxproj.filters  net_connection.cpp  net_connection.h  net_message.cpp  net_message.h  net_server.h  net_tsqueue.cpp  net_tsqueue.h
RealTimeFaceMaskDetector/NetFrameworkTests/: NetFrameworkTests.vcxproj  test.cpp
RealTimeFaceMaskDetector/SQLServerDLL/: CMakeLists.txt  ConfigReader.h  IniParser.cpp  IniParser.h  SQLConnection.h  SQLException.cpp  SQLException.h  SQLServer.cpp  SQLServer.h  SQLServerDLL.vcxproj  SQLServerDLL.vcxproj.filters  XMLParser.cpp  XMLParser.h
RealTimeFaceMaskDetector/SQLServerTests/: SQLServerTests.vcxproj  test.cpp
RealTimeFaceMaskDetector/ServerInstall/: ServerInstall.vdproj
RealTimeFaceMaskDetector/TCPClientUI/: ._TCPClientUI.vcxproj  ._TCPClientUI.vcxproj.filters  CMakeLists.txt  FaceRecognitionUI.cpp  FaceRecognitionUI.h  FaceRecognitionUI.ui  FaceRecognizer.cpp  FaceRecognizer.h  ImageData.cpp  ImageData.h  Logger.cpp  MaskRecognizer.cpp  MaskRecognizer.h  TCPClient.cpp  TCPClient.h  TCPClientUI.cpp  TCPClientUI.h  TCPClientUI.pri  TCPClientUI.pro  TCPClientUI.qrc  TCPClientUI.ui  TCPClientUI.vcxproj  TCPClientUI.vcxproj.filters  TimeCounting.h  config.xml  easylogging++.cpp  main.cpp
RealTimeFaceMaskDetector/TCPServer/: AAA  CMakeLists.txt  Configuration.conf  Logger.h  Main.cpp  README.txt  ServiceStarter.cpp  ServiceStarter.h  SocketServer.cpp  SocketServer.h  TCPServer.vcxproj  TCPServer.vcxproj.filters  ThreadPool.cpp  ThreadPool.h  WindowsService.cpp  WindowsService.h  server_main.cpp
RealTimeFaceMaskDetector/TCPServerProto/: SocketServer.cpp  SocketServer.h  TCPServerProto.sln  TCPServerProto.vcxproj  TCPServerProto.vcxproj.filters  ThreadPool.cpp  main.cpp
RealTimeFaceMaskDetector/TCPServerTest/: TCPServerTest.vcxproj  test.cpp
RealTimeFaceMaskDetector/WinService/: CMakeLists.txt  Main.cpp  WinService.vcxproj  WinService.vcxproj.filters  WindowsService.cpp  WindowsService.h
RealTimeFaceMaskDetector/WindowsService/: WindowsService.vcxproj  WindowsService.vcxproj.filters
SQLServer Package/: README.txt  TestCode.cpp  TutorialScript.sql
SQLServer Package/Debug/: SQLServer.exp  SQLServer.ilk  SQLServer.lib
SQLServer Package/Release/: SQLServer.exp  SQLServer.iobj  SQLServer.ipdb  SQLServer.lib
SQLServer Package/SQLServer/: SQLServer.cpp  SQLServer.h
(+2 files in other folders)
